<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/tableLayoutListServer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRowServerSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/spinner_mainmenu_server_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/listTableRowServerIP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/listTxtServerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/listEdtServerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:id="@+id/listTableRowServerPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/listTxtServerIP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ip"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/listEdtServerIP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.44"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:id="@+id/listTableRowServerUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/listTxtServerPort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/port"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/listEdtServerPort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.44"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:id="@+id/listTableRowServerPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/listTxtServerUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/listEdtServerUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.44"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:id="@+id/listTableRowServerPassword22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/listTxtServerUserName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/listEdtServerPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.44" android:inputType="textPassword"/>
        </TableRow>

        <TableRow
            android:id="@+id/listTableRowServerPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_mainmenu_server_list_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update" />
    	
            <Button
                android:id="@+id/btn_mainmenu_server_list_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete" />
            
        </TableRow>
    
    
    </TableLayout>

</LinearLayout>